Closed Bug 829230 Opened 12 years ago Closed 12 years ago

Some rooting for JSCompartment::wrap

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: evilpies, Assigned: evilpies)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch v1 (obsolete) — Splinter Review
I am pretty sure there could be done a lot more for this function. But this removes 81 locally for me, down to 116 failures on jit-tests.
Attachment #700625 - Flags: review?(terrence)
Attached patch clean versionSplinter Review
Some stuff slipped in there.
Attachment #700625 - Attachment is obsolete: true
Attachment #700625 - Flags: review?(terrence)
Attachment #700629 - Flags: review?(terrence)
Comment on attachment 700629 [details] [diff] [review] clean version Review of attachment 700629 [details] [diff] [review]: ----------------------------------------------------------------- Awesome! I guess this means we are testing |JSCompartment::wrap| now. ::: js/src/jscompartment.cpp @@ +352,5 @@ > } > > if (vp->isString()) { > RootedValue orig(cx, *vp); > + Rooted<JSStableString *> str(cx, vp->toString()->ensureStable(cx)); RootedStableString. Add |ForwardDeclareJS(StableString);|, replacing the existing |class JSStableString;| forward declaration at the top of vm/String.h.
Attachment #700629 - Flags: review?(terrence) → review+
(In reply to Terrence Cole [:terrence] from comment #2) > Comment on attachment 700629 [details] [diff] [review] > clean version > > Review of attachment 700629 [details] [diff] [review]: > ----------------------------------------------------------------- > > Awesome! I guess this means we are testing |JSCompartment::wrap| now. > > ::: js/src/jscompartment.cpp > @@ +352,5 @@ > > } > > > > if (vp->isString()) { > > RootedValue orig(cx, *vp); > > + Rooted<JSStableString *> str(cx, vp->toString()->ensureStable(cx)); > > RootedStableString. Add |ForwardDeclareJS(StableString);|, replacing the > existing |class JSStableString;| forward declaration at the top of > vm/String.h. This didn't really work out as planned, discussed on IRC.
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: