Bug 829230 - Some rooting for JSCompartment::wrap