js/src/jscompartment.cpp
@@ -301,7 +301,7 @@ JSCompartment::wrap(JSContext *cx, Value *vp, JSObject *existing)
 
     /* Unwrap incoming objects. */
     if (vp->isObject()) {
-        Rooted<JSObject*> obj(cx, &vp->toObject());
+        RootedObject obj(cx, &vp->toObject());
 
         if (obj->compartment() == this)
             return WrapForSameCompartment(cx, obj, vp);
@@ -353,10 +353,10 @@ JSCompartment::wrap(JSContext *cx, Value *vp, JSObject *existing)
 
     if (vp->isString()) {
         RootedValue orig(cx, *vp);
-        JSStableString *str = vp->toString()->ensureStable(cx);
+        Rooted<JSStableString *> str(cx, vp->toString()->ensureStable(cx));
         if (!str)
             return false;
-        JSString *wrapped = js_NewStringCopyN(cx, str->chars().get(), str->length());
+        RootedString wrapped(cx, js_NewStringCopyN(cx, str->chars().get(), str->length()));
         if (!wrapped)
             return false;
         vp->setString(wrapped);
